--- a/style.css
+++ b/style.css
@@ -94,5 +94,10 @@ button:focus {
 #top-sale .owl-carousel .owl-nav button.owl-next span {
   margin-right: -4rem;
 }
+/*   Special Price Section Template */
+#special-price .grid .grid-item {
+  margin-right: 1.2rem;
+  margin-top: 1rem;
+}
 
 /*# sourceMappingURL=style.css.map */
